--- a/src/Components/Parts/TableRow.scss
+++ b/src/Components/Parts/TableRow.scss
@@ -1,9 +1,12 @@
 .table_row{
   border: 1px solid #000;
-  padding: 15px 0 15px 25px;
+  padding: 15px 25px;
   border-radius: 12px;
   background: #fafafa;
   margin-bottom: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 
   &:hover{
     cursor: pointer;
